syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "ledgercore/transfer";

package transfer;

service Transfer {
  rpc CreateTransaction(TransactionRequest) returns (TransactionResponse) {}
}

message TransactionRequest {
  bytes id = 1;
  bytes source = 2;
  bytes target = 3;
  int64 amount = 4;
  int32 fractional = 5;
  string currency = 6;
  string description = 7;
}

message OperationDetailsResponse {
  int64 id = 1;
  string type = 2;
  string status = 3;
  int64 amount = 4;
  int32 fractional = 5;
}

message TransactionDetailsResponse {
  bytes id = 1;
  google.protobuf.Timestamp time = 2;
  int64 amount = 3;
  int32 fractional = 4;
  string description = 5;
  string currency = 6;
  OperationDetailsResponse sourceOperation = 7;
  OperationDetailsResponse targetOperation = 8;
}

message TransactionResponse {
  int32 status = 1;
  TransactionDetailsResponse details = 2;
}